# mutaktor

./: .editorconfig  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  build.gradle.kts  codecov.yml  gradle.properties  qodana-global-configurations.yaml  qodana.yaml  settings.gradle.kts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  qodana-config.yml  qodana.yml  release.yml  scorecard.yml  security.yml  sonarcloud.yml
build-logic/: build.gradle.kts
build-logic/src/main/kotlin/: kotlin-conventions.gradle.kts
docs/: README.md
docs/en/: 01-architecture.md  02-configuration.md  03-kotlin-filters.md  04-git-integration.md  05-reporting.md  06-development.md  07-ci-cd.md  08-changelog.md  README.md
docs/ru/: 01-architecture.md  02-configuration.md  03-kotlin-filters.md  04-git-integration.md  05-reporting.md  06-development.md  07-ci-cd.md  08-changelog.md  README.md
docs/superpowers/plans/: 2026-03-21-ce-100-percent.md  2026-03-21-mutaktor-project-plan.md  2026-03-21-mutaktor-v02-v10-roadmap.md
docs/superpowers/reports/: 2026-03-21-business-strategy.md  2026-03-21-final-pm-qa-assessment.md  2026-03-21-licensing-strategy.md  2026-03-21-pm-qa-plan-review.md  2026-03-21-session-final-report.md  2026-03-21-sprint11-final.md
e2e-test/: .gitignore  COMPATIBILITY_REPORT.md  Containerfile.matrix  README.md  pyproject.toml
e2e-test/mutaktor_compat/: cli.py  matrix.py  runner.py
e2e-test/projects/java-baseline/: build.gradle.kts  settings.gradle.kts
e2e-test/projects/java-baseline/src/main/java/com/example/: Calculator.java  CollectionUtils.java  StringProcessor.java
e2e-test/projects/java-baseline/src/test/java/com/example/: CalculatorTest.java  CollectionUtilsTest.java  StringProcessorTest.java
gradle/: libs.versions.toml  verification-metadata.xml
mutaktor-annotations/: build.gradle.kts
mutaktor-gradle-plugin/: build.gradle.kts
mutaktor-gradle-plugin/src/functionalTest/kotlin/io/github/dantte_lp/mutaktor/: MutaktorPluginFunctionalTest.kt
mutaktor-gradle-plugin/src/functionalTest/kotlin/io/github/ioplane/mutaktor/: MutaktorPluginFunctionalTest.kt
mutaktor-gradle-plugin/src/main/kotlin/io/github/dantte_lp/mutaktor/: MutaktorAggregatePlugin.kt  MutaktorExtension.kt  MutaktorPlugin.kt  MutaktorTask.kt
mutaktor-gradle-plugin/src/main/kotlin/io/github/ioplane/mutaktor/: MutaktorAggregatePlugin.kt  MutaktorExtension.kt  MutaktorPlugin.kt  MutaktorTask.kt
mutaktor-gradle-plugin/src/test/kotlin/io/github/dantte_lp/mutaktor/: MutaktorAggregatePluginTest.kt  MutaktorPluginTest.kt  MutaktorTaskArgumentsTest.kt
mutaktor-gradle-plugin/src/test/kotlin/io/github/ioplane/mutaktor/: MutaktorAggregatePluginTest.kt  MutaktorPluginTest.kt  MutaktorTaskArgumentsTest.kt
mutaktor-pitest-filter/: build.gradle.kts
presentation/: Containerfile  index.html  package.json  vite.config.js
presentation/ru/: index.html
presentation/src/: App.jsx  i18n.js  index.css
(+60 files in other folders)
